add more narrative to notebook

--- a/src/notebooks/analyze-harmonized-data.ipynb
+++ b/src/notebooks/analyze-harmonized-data.ipynb
@@ -1,8 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## This notebook demonstrates some simple aggregate analysis on the harmonized names in the biosample dataset (biosample_set.xml). \n",
+    "\n",
+    "### Before running the notebook, you need to generate the dataset `../../target/harmonized-values-eav.tsv.zip` This is done by executing `make target/harmonized-values-eav.tsv` and then zipping the file."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,18 +27,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## load harmonized entity-attribute-value file\n",
+    "## Load harmonized entity-attribute-value file\n",
     "* first load into pandas\n",
-    "* second load into dask for better performance"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pds.read_csv('../../target/harmonized-values-eav.tsv.zip', sep='\\t')"
+    "* second load into dask for better performance\n",
+    "\n",
+    "#### NB: you must first generate the dataset using the `make target/harmonized-values-eav.tsv` command and then zipping the file."
    ]
   },
   {
@@ -38,21 +40,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ddf = dd.from_pandas(df, npartitions=8)"
+    "df = pds.read_csv('../../target/harmonized-values-eav.tsv.zip', sep='\\t', dtype=str)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "ddf = ddf.reset_index()"
+    "### Due to the size of the dataset, pandas does not perform well. So, load the the dataset into a dask dataframe. I set the partions to 8 b/c I read that the as rule of thumb you should have twice as many parttions as you have CPU cores. Adjusting the number of partitions can affect performance."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ddf = dd.from_pandas(df, npartitions=8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ddf = ddf.reset_index() # make the index a column name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +149,7 @@
        "4      4  SAMN00000002  env_broad_scale  terrestrial biome [ENVO:00000446]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,49 +159,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['index', 'biosample', 'attribute', 'value'], dtype='object')"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ddf.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'dask.dataframe.core.DataFrame'>\n",
-      "Columns: 4 entries, index to value\n",
-      "dtypes: object(3), int64(1)"
-     ]
-    }
-   ],
-   "source": [
-    "ddf.info()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### compute the number of biosamples"
+    "### Compute the number of biosamples"
    ]
   },
   {
@@ -221,12 +200,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### compute number of times an attribute occurres"
+    "### Compute number of times an attribute with a harmonized name occurres"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### First create a dictionary with dictionary with each attribute and a count of 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -246,18 +232,25 @@
        "0"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "attributes['env_broad_scale']"
+    "attributes['env_broad_scale'] # used for testing before and after counts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Next iterate over the data frame and increment the count of each attribute"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -276,18 +269,25 @@
        "1537375"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "attributes['env_broad_scale'] # test of one record"
+    "attributes['env_broad_scale'] # post test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Put the count dictonary into a padas dataframe for plotting"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -339,18 +339,25 @@
        "4  env_broad_scale  1537375"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "attrCountDf.query(\"attribute == 'env_broad_scale'\") # test of one record"
+    "attrCountDf.query(\"attribute == 'env_broad_scale'\") # make sure this matches above"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Total number of distinct attributes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -359,13 +366,21 @@
        "447"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(attrCountDf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Plot attribute against number of occurrences\n",
+    "Note: The attribute names are ommitted b/c they are not readable."
    ]
   },
   {
@@ -400,8 +415,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### For readability, let's look the harmonized attributes with the top 50 occurrences."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -440,9 +462,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## implement SAX parser\n",
-    "see https://www.tutorialspoint.com/python3/python_xml_processing.htm for an example\n",
-    "took around 40 minutes to run on my machine"
+    "## Compare results above to data retrieved using the SAX parser running agains `biosample_set.xml`\n",
+    "See https://www.tutorialspoint.com/python3/python_xml_processing.htm for an example of SAX parser.  \n",
+    "Note: This took around 40 minutes to run on my machine."
    ]
   },
   {
@@ -529,8 +551,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### count number of biosample tag occurrences\n",
-    "#### datafame analysis found 13791009; why the difference? \n",
+    "## Count number of biosample tag occurrences and compare\n",
+    "#### datafame analysis (above) found 13791009; why the difference? \n",
     "#### I \"think\" it is b/c some xml biosample records don't have any harmonized attributes, and the xml parse still counts this. Here is an example:\n",
     "```xml\n",
     "<BioSample submission_date=\"2008-04-04T08:44:29.030\" last_update=\"2014-03-17T12:37:44.407\" publication_date=\"2008-04-04T08:44:29.250\" access=\"public\" id=\"13\" accession=\"SAMN00000013\">\n",
@@ -569,7 +591,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### when I query the dataframe representation, biosample SAMN00000013 is not found"
+    "### When I query the dataframe representation, biosample SAMN00000013 is not found"
    ]
   },
   {
@@ -647,8 +669,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### count number of env_broad_scale attribute occurrences\n",
-    "#### dataframe anayis above found 1537375; why the difference?"
+    "### Count number of env_broad_scale attribute occurrences and compare.\n",
+    "#### dataframe anayis (above) found 1537375. Why is there a difference?"
    ]
   },
   {
