print out describe

--- a/notebooks/first_analysis_notebook.ipynb
+++ b/notebooks/first_analysis_notebook.ipynb
@@ -62,6 +62,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df_describe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df_describe.to_csv(\"harmonized-table.parquet_describe.tsv\", sep=\"\\t\", header=True, index=True)"
    ]
   },
