--- a/src/notebooks/build-non-human-samples.ipynb
+++ b/src/notebooks/build-non-human-samples.ipynb
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
        "14300584"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "7480877"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
        "464"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
        "205"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +362,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env_packageCount = pds.DataFrame(sliceDf.groupby('env_package').env_package.count())\\\n",
+    "                      .rename(columns={'env_package':'count'})\\\n",
+    "                      .reset_index()\n",
+    "# env_packageCount"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +430,7 @@
        " 'water']"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +466,7 @@
        "45951"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +720,7 @@
        "0   Coastal water body (ENVO:02000049)      1"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1410,7 +1422,7 @@
        "      <td>Missing: Not provided</td>\n",
        "      <td>0.50%</td>\n",
        "      <td>N/D</td>\n",
-       "      <td>488</td>\n",
+       "      <td>820</td>\n",
        "      <td>silt loam (2-4% slopes; fine-silty, mixed, sup...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1429,7 +1441,7 @@
        "      <td>water</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>500g sponge material</td>\n",
+       "      <td>50 g</td>\n",
        "      <td>02/01/2011-12/01/2011</td>\n",
        "      <td>Missing: Not provided</td>\n",
        "      <td>NaN</td>\n",
@@ -1503,11 +1515,11 @@
        "      <td>NaN</td>\n",
        "      <td>Missing: Not provided</td>\n",
        "      <td>Missing: Not provided</td>\n",
-       "      <td>1.07 NTU</td>\n",
+       "      <td>1.10 NTU</td>\n",
        "      <td>plants were grown in Duke Phytotron growth cha...</td>\n",
        "      <td>Field observation</td>\n",
        "      <td>Surveys to landowners</td>\n",
-       "      <td>5.110^51.510^5 VLPs mlÃ¢ÂÂ1</td>\n",
+       "      <td>2.510^61.210^6 VLPs mlÃ¢ÂÂ1</td>\n",
        "      <td>1.56 bar</td>\n",
        "      <td>DRI, Murray lab</td>\n",
        "      <td>ENVO:cropland biome</td>\n",
@@ -1526,12 +1538,12 @@
        "      <td>N/D</td>\n",
        "      <td>aerobic</td>\n",
        "      <td>plant-associated habitat</td>\n",
-       "      <td>58%</td>\n",
+       "      <td>40%</td>\n",
        "      <td>Missing: Not collected</td>\n",
-       "      <td>16.11 pmol leu/L/hr</td>\n",
+       "      <td>327.96 pmol leu/L/hr</td>\n",
        "      <td>http://soils.usda.gov/technical/classification...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.372</td>\n",
+       "      <td>0.248</td>\n",
        "      <td>barley</td>\n",
        "      <td>zooplankton individuals per liter</td>\n",
        "      <td>Anti bird net applied, plants removed in bucke...</td>\n",
@@ -1549,7 +1561,7 @@
        "      <td>Missing: Not Provided</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.1</td>\n",
-       "      <td>20.12microMolePerLiter</td>\n",
+       "      <td>44.47microMolePerLiter</td>\n",
        "      <td>NaN</td>\n",
        "      <td>67 kg N ha-1</td>\n",
        "      <td>21.1 oC (day); 15.6 oC (night)</td>\n",
@@ -1564,9 +1576,9 @@
        "      <td>silt</td>\n",
        "      <td>silty clay loam</td>\n",
        "      <td>Missing: Not collected</td>\n",
-       "      <td>0.16 mgm-3</td>\n",
+       "      <td>0.61 mgm-3</td>\n",
        "      <td>Missing: Not provided</td>\n",
-       "      <td>3.29microMolePerLiter</td>\n",
+       "      <td>4.32microMolePerLiter</td>\n",
        "      <td>grass/herbaceous cover</td>\n",
        "      <td>Field observation</td>\n",
        "      <td>2004</td>\n",
@@ -1583,7 +1595,7 @@
        "      <td>0.0</td>\n",
        "      <td>Missing: Not collected</td>\n",
        "      <td>3.08</td>\n",
-       "      <td>2.85 % silt and clay; 97.15 % sand</td>\n",
+       "      <td>0.30 % silt and clay; 99.70 % sand</td>\n",
        "      <td>30.274 N 120.155 E</td>\n",
        "      <td>96,96</td>\n",
        "      <td>Missing: Not provided</td>\n",
@@ -1599,13 +1611,13 @@
        "      <td>0.01</td>\n",
        "      <td>Missing: Not provided</td>\n",
        "      <td>one forest plot had the size 25.8 m x 25.8 m w...</td>\n",
-       "      <td>458.492</td>\n",
+       "      <td>403.15</td>\n",
        "      <td>photosynthetic</td>\n",
        "      <td>Missing: Not provided</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>BIOSAMPLE:SAMEA104466843</td>\n",
+       "      <td>BIOSAMPLE:SAMEA4707948</td>\n",
        "      <td>410658</td>\n",
        "      <td>soil metagenome</td>\n",
        "      <td>Generic.1.0</td>\n",
@@ -1842,7 +1854,7 @@
        "       diss_hydrogen heavy_metals microbial_biomass  \\\n",
        "count              2          158               178   \n",
        "unique             1            5               152   \n",
-       "top            0.50%          N/D               488   \n",
+       "top            0.50%          N/D               820   \n",
        "freq               2          108                 3   \n",
        "\n",
        "                                                soil_type ventilation_type  \\\n",
@@ -1875,11 +1887,11 @@
        "top     Missing: Not provided         iso alkanes               NaN      NaN   \n",
        "freq                     1111                   2               NaN      NaN   \n",
        "\n",
-       "       env_package bac_resp soluble_react_phosp               biomass  \\\n",
-       "count        45951        0                   0                     2   \n",
-       "unique          32        0                   0                     2   \n",
-       "top          water      NaN                 NaN  500g sponge material   \n",
-       "freq         16367      NaN                 NaN                     1   \n",
+       "       env_package bac_resp soluble_react_phosp biomass  \\\n",
+       "count        45951        0                   0       2   \n",
+       "unique          32        0                   0       2   \n",
+       "top          water      NaN                 NaN    50 g   \n",
+       "freq         16367      NaN                 NaN       1   \n",
        "\n",
        "               samp_store_dur                 conduc diss_inorg_nitro  \\\n",
        "count                     260                   1898                0   \n",
@@ -2022,7 +2034,7 @@
        "       rainfall_regm                   temp           tot_org_carb turbidity  \\\n",
        "count              0                  13186                   1693       102   \n",
        "unique             0                   3074                    934        48   \n",
-       "top              NaN  Missing: Not provided  Missing: Not provided  1.07 NTU   \n",
+       "top              NaN  Missing: Not provided  Missing: Not provided  1.10 NTU   \n",
        "freq             NaN                   1403                     74        10   \n",
        "\n",
        "                                       season_environment cur_vegetation_meth  \\\n",
@@ -2034,7 +2046,7 @@
        "       previous_land_use_meth            suspend_part_matter  pressure  \\\n",
        "count                     109                             10       403   \n",
        "unique                      2                             10        17   \n",
-       "top     Surveys to landowners  5.110^51.510^5 VLPs mlÃ¢ÂÂ1  1.56 bar   \n",
+       "top     Surveys to landowners  2.510^61.210^6 VLPs mlÃ¢ÂÂ1  1.56 bar   \n",
        "freq                      108                              1       144   \n",
        "\n",
        "         samp_store_loc      env_broad_scale samp_size     tillage  \\\n",
@@ -2064,14 +2076,14 @@
        "       heavy_metals_meth oxy_stat_samp           env_local_scale humidity  \\\n",
        "count                137           724                     45754       16   \n",
        "unique                 3            31                      1278        6   \n",
-       "top                  N/D       aerobic  plant-associated habitat      58%   \n",
+       "top                  N/D       aerobic  plant-associated habitat      40%   \n",
        "freq                 108           376                      5126        4   \n",
        "\n",
-       "               redox_potential   bacteria_carb_prod  \\\n",
-       "count                      135                   60   \n",
-       "unique                      92                    6   \n",
-       "top     Missing: Not collected  16.11 pmol leu/L/hr   \n",
-       "freq                        10                   10   \n",
+       "               redox_potential    bacteria_carb_prod  \\\n",
+       "count                      135                    60   \n",
+       "unique                      92                     6   \n",
+       "top     Missing: Not collected  327.96 pmol leu/L/hr   \n",
+       "freq                        10                    10   \n",
        "\n",
        "                                         local_class_meth glucosidase_act  \\\n",
        "count                                                 323               0   \n",
@@ -2082,7 +2094,7 @@
        "       diss_org_nitro pathogenicity                     organism_count  \\\n",
        "count             117             1                                202   \n",
        "unique             12             1                                 46   \n",
-       "top             0.372        barley  zooplankton individuals per liter   \n",
+       "top             0.248        barley  zooplankton individuals per liter   \n",
        "freq               26             1                                 48   \n",
        "\n",
        "                                             perturbation ventilation_rate  \\\n",
@@ -2124,7 +2136,7 @@
        "                 part_org_carb chem_mutagen agrochem_addition  \\\n",
        "count                      134            0               622   \n",
        "unique                      94            0                33   \n",
-       "top     20.12microMolePerLiter          NaN      67 kg N ha-1   \n",
+       "top     44.47microMolePerLiter          NaN      67 kg N ha-1   \n",
        "freq                         6          NaN               355   \n",
        "\n",
        "                         air_temp_regm             alkalinity source_uvig  \\\n",
@@ -2148,13 +2160,13 @@
        "                  primary_prod       fluor        diss_inorg_carb  \\\n",
        "count                       80         215                   3353   \n",
        "unique                      65         107                    961   \n",
-       "top     Missing: Not collected  0.16 mgm-3  Missing: Not provided   \n",
+       "top     Missing: Not collected  0.61 mgm-3  Missing: Not provided   \n",
        "freq                        14          10                   1631   \n",
        "\n",
        "               part_org_nitro            cur_land_use       horizon_meth  \\\n",
        "count                     134                    1871                108   \n",
        "unique                     89                      32                  1   \n",
-       "top     3.29microMolePerLiter  grass/herbaceous cover  Field observation   \n",
+       "top     4.32microMolePerLiter  grass/herbaceous cover  Field observation   \n",
        "freq                        6                     950                108   \n",
        "\n",
        "        fire climate_environment               chlorophyll  \\\n",
@@ -2184,7 +2196,7 @@
        "                            particle_class             lat_lon water_content  \\\n",
        "count                                   29               13156           849   \n",
        "unique                                  10                2591           445   \n",
-       "top     2.85 % silt and clay; 97.15 % sand  30.274 N 120.155 E         96,96   \n",
+       "top     0.30 % silt and clay; 99.70 % sand  30.274 N 120.155 E         96,96   \n",
        "freq                                     3                 219           144   \n",
        "\n",
        "                           ph                ph_meth              magnesium  \\\n",
@@ -2220,7 +2232,7 @@
        "                                                  sieving tot_part_carb  \\\n",
        "count                                                 863            22   \n",
        "unique                                                 32            22   \n",
-       "top     one forest plot had the size 25.8 m x 25.8 m w...       458.492   \n",
+       "top     one forest plot had the size 25.8 m x 25.8 m w...        403.15   \n",
        "freq                                                  394             1   \n",
        "\n",
        "         trophic_level                calcium resp_part_matter  \\\n",
@@ -2229,11 +2241,11 @@
        "top     photosynthetic  Missing: Not provided              NaN   \n",
        "freq                 9                   1152              NaN   \n",
        "\n",
-       "       diss_inorg_phosp aminopept_act                        id taxonomy_id  \\\n",
-       "count                 0             0                     45951       45951   \n",
-       "unique                0             0                     45951         220   \n",
-       "top                 NaN           NaN  BIOSAMPLE:SAMEA104466843      410658   \n",
-       "freq                NaN           NaN                         1        8740   \n",
+       "       diss_inorg_phosp aminopept_act                      id taxonomy_id  \\\n",
+       "count                 0             0                   45951       45951   \n",
+       "unique                0             0                   45951         220   \n",
+       "top                 NaN           NaN  BIOSAMPLE:SAMEA4707948      410658   \n",
+       "freq                NaN           NaN                       1        8740   \n",
        "\n",
        "          taxonomy_name      package  \n",
        "count             45951        45951  \n",
@@ -2242,7 +2254,7 @@
        "freq               8740        36982  "
       ]
      },
-     "execution_count": 123,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2261,7 +2273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2271,7 +2283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2287,7 +2299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2296,7 +2308,7 @@
        "(45951, 209)"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2307,7 +2319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2316,7 +2328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2325,7 +2337,7 @@
        "(45951, 156)"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2343,11 +2355,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sliceDf.to_csv('../../target/non-human-samples.tsv.gz', sep='\\t', compression='gzip')"
+    "sliceDf.to_csv('../../target/non-human-samples.tsv.gz', sep='\\t', compression='gzip', index=False)"
    ]
   },
   {
