--- a/src/notebooks/OGER-PostprocessingSandbox.ipynb
+++ b/src/notebooks/OGER-PostprocessingSandbox.ipynb
@@ -9,15 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 11 µs, sys: 1e+03 ns, total: 12 µs\n",
-      "Wall time: 14.1 µs\n"
+      "CPU times: user 50 µs, sys: 0 ns, total: 50 µs\n",
+      "Wall time: 55.1 µs\n"
      ]
     }
    ],
@@ -26,12 +26,12 @@
     "\n",
     "import pandas as pd\n",
     "from datetime import datetime\n",
-    "# pd.options.mode.chained_assignment = None  # default='warn'"
+    "pd.options.mode.chained_assignment = None  # default='warn'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "4      animal husbandry  ENVO:01001248     S1  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,6 +170,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Unique BiosampleIds: 649677\n",
       "Unique CURIEs: 1686\n",
       "Unique Biolinks: 4\n",
       "Unique Standard Terms: 1677\n"
@@ -316,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +434,7 @@
        "772                   saline evaporation pond  ENVO:00000055     S1  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,24 +455,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5 µs, sys: 0 ns, total: 5 µs\n",
-      "Wall time: 7.87 µs\n"
+      "CPU times: user 6 µs, sys: 0 ns, total: 6 µs\n",
+      "Wall time: 10 µs\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "# Function to phrase-ify\n",
-    "def phrasify(bsIdList, columnNames):\n",
+    "def phrasify(dataFrame, columnNames):\n",
     "    count = 0\n",
     "    returnDF = pd.DataFrame(columns=columnNames)\n",
+    "    \n",
+    "    bsIdList = dataFrame.BiosampleID.unique()\n",
+    "    \n",
     "    for i in bsIdList:\n",
     "        count += 1\n",
     "        tmpDF = pd.DataFrame()\n",
@@ -479,9 +483,8 @@
     "        phrase1 = []\n",
     "        phrase2 = []\n",
     "\n",
-    "        tmpDF = df.loc[(df.BiosampleID == i)]\n",
+    "        tmpDF = dataFrame.loc[(dataFrame.BiosampleID == i)]\n",
     "        tmpDF.sort_values(by=['BeginTerm'], inplace=True)\n",
-    "        break;\n",
     "\n",
     "        for row in tmpDF.iterrows():\n",
     "            bpList.append(row[1].BeginTerm)\n",
@@ -497,14 +500,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter value: 1K - 23/10/2020 15:06:19\n",
+      "Counter value: 2K - 23/10/2020 15:06:25\n",
+      "Counter value: 3K - 23/10/2020 15:06:31\n",
+      "Counter value: 4K - 23/10/2020 15:06:38\n",
+      "Counter value: 5K - 23/10/2020 15:06:44\n",
+      "Counter value: 6K - 23/10/2020 15:06:51\n",
+      "Counter value: 7K - 23/10/2020 15:06:58\n",
+      "CPU times: user 43.7 s, sys: 732 ms, total: 44.5 s\n",
+      "Wall time: 46.2 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BiosampleID</th>\n",
+       "      <th>BeginPosList</th>\n",
+       "      <th>Phrase</th>\n",
+       "      <th>StdPhrase</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SAMN09200348</td>\n",
+       "      <td>[0]</td>\n",
+       "      <td>[Wetland]</td>\n",
+       "      <td>[saline marsh]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SAMN13482251</td>\n",
+       "      <td>[11, 11, 11]</td>\n",
+       "      <td>[Lake, Lake, Lake]</td>\n",
+       "      <td>[saline evaporation pond, container of an inte...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SAMN10915792</td>\n",
+       "      <td>[0, 0, 0]</td>\n",
+       "      <td>[Lake, Lake, Lake]</td>\n",
+       "      <td>[saline evaporation pond, container of an inte...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SAMN09065568</td>\n",
+       "      <td>[35, 35, 35]</td>\n",
+       "      <td>[Lake, Lake, Lake]</td>\n",
+       "      <td>[saline evaporation pond, container of an inte...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SAMN02731762</td>\n",
+       "      <td>[46, 46, 46, 388, 388, 388]</td>\n",
+       "      <td>[lake, lake, lake, lake, lake, lake]</td>\n",
+       "      <td>[saline evaporation pond, container of an inte...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    BiosampleID                 BeginPosList  \\\n",
+       "0  SAMN09200348                          [0]   \n",
+       "0  SAMN13482251                 [11, 11, 11]   \n",
+       "0  SAMN10915792                    [0, 0, 0]   \n",
+       "0  SAMN09065568                 [35, 35, 35]   \n",
+       "0  SAMN02731762  [46, 46, 46, 388, 388, 388]   \n",
+       "\n",
+       "                                 Phrase  \\\n",
+       "0                             [Wetland]   \n",
+       "0                    [Lake, Lake, Lake]   \n",
+       "0                    [Lake, Lake, Lake]   \n",
+       "0                    [Lake, Lake, Lake]   \n",
+       "0  [lake, lake, lake, lake, lake, lake]   \n",
+       "\n",
+       "                                           StdPhrase  \n",
+       "0                                     [saline marsh]  \n",
+       "0  [saline evaporation pond, container of an inte...  \n",
+       "0  [saline evaporation pond, container of an inte...  \n",
+       "0  [saline evaporation pond, container of an inte...  \n",
+       "0  [saline evaporation pond, container of an inte...  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%time\n",
     "\n",
     "pCols = ['BiosampleID', 'BeginPosList', 'Phrase', 'StdPhrase']\n",
-    "phraseDF = phrasify(df.BiosampleID.unique(),pCols)\n",
+    "phraseDF = phrasify(envPatSal,pCols)\n",
     "phraseDF.head()"
    ]
   },
